Updated with KL experience
Removed Xamarin Student Ambassador

--- a/Resume.tex
+++ b/Resume.tex
@@ -71,7 +71,7 @@
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\href{http://ishammohamed.tech/}{\Large Isham Mohamed}} & Email : \href{mailto:ishammohamed@outlook.com}{ishammohamed@outlook.com}\\
   \href{http://programmium.wordpress.com/}{http://programmium.wordpress.com} & \href{https://github.com/ishammohamed}{github.com/ishammohamed} \\
-  \href{https://www.researchgate.net/profile/Mohamed_Iqbal_Mohamed}{https://www.researchgate.net/profile/Mohamed\_Iqbal\_Mohamed} & Mobile : +94 772 977 462 \\
+  \href{https://www.researchgate.net/profile/Mohamed_Iqbal_Mohamed}{https://www.researchgate.net/profile/Mohamed\_Iqbal\_Mohamed} & Mobile : +94 772 977 462 | +60 132 316 7722 \\
 \end{tabular*}
 
 
@@ -80,22 +80,32 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Sabaragamuwa University of Sri Lanka}{Belihuloya, Sri Lanka}
-      {Bachelor of Science in Computing and Information Systems (spcl);  GPA: 2.9}{2011 -- 2015}
+      {Bachelor of Science in Computing and Information Systems (spcl)}{2011 -- 2015}
   \resumeSubHeadingListEnd
 
 
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
-
+  
+    \resumeSubheading
+	  {KloudyNet Technologies SDN BHD}{Kuala Lumpur, Malaysia}
+	  {Software Developer - Engineering}{September 2018 - Present}
+	  \resumeItemListStart
+	    \resumeItem{Res Ipsa}
+		  {An Artificial Intellitent infused Bot, for Legal domain. Built on top of Microsoft Azure cloud, with Azure Search and Azure Cognitive Services. Buit for the LawTechHack2018, Malaysia and won One million worth cloud credits for the project.}
+	  \resumeItemListEnd
+  
     \resumeSubheading
       {IFS RnD International}{Colombo, Sri Lanka}
-      {Software Engineer - IoT}{June 2017 - Present}
+      {Software Engineer - IoT}{June 2017 - September 2018}
       \resumeItemListStart
         \resumeItem{IFS IoT Discovery Manager}
-          {IFS IoT Discovery Manager is a tool which is a part of the IFS IoT offering. This tool can be used to create, monitor and manage Microsoft Azure resources relevant to IoT such as IoTHub, Stream Analytics, ServiceBus Queue, Event Hubs etc on top of customer's Azure subscription. This tool is being developed using Microsoft ASP.NET MVC, Angular JS, Azure SQL database and Microsoft Azure Resource Manager APIs. }
+          {IFS IoT Discovery Manager is a tool which is a part of the IFS IoT offering. This tool can be used to create, monitor and manage Microsoft Azure resources relevant to IoT such as IoTHub, Stream Analytics, ServiceBus Queue, Event Hubs etc on top of customer's Azure subscription. Technologies: \texttt{Microsoft ASP.NET MVC, Angular JS, Azure SQL, Microsoft ARM APIs. Microsoft Graph and AAD Graph}.}
         \resumeItem{IFS IoT Gateway Service}
-          {IFS IoT Gateway Service is being delivered as a Windows Service and a Azure Worker Role service via the delivery of IFS IoT offering.I helped migrating the Windows Service to Azure Work Role service by extracting the business logic to be reused in both these components. Technologies involved are Azure Worker Role, Azure Application Insights and C\#. }
+          {Deliveredelivered as a Windows Service, an Azure Worker Role service and as an Azure Function via the delivery of IFS IoT offering. Migrated the Windows Service to Azure Work Role service and to Azure Functions. Technologies: \texttt{Azure Worker Role, Azure Functions, Azure Application Insights, Azure Service Bus SDK, Azure IoT Devices SDK and .NET Full with C\#}. }
+        \resumeItem{IFS IoT Heartbeat Functions}
+          {A FaaS offering to ensure the pipeline connectivity in IFS IoT Reference Architecture. Technologies: \texttt{Azure Functions, Azure Service Bus SDK, Azure IoT Devices SDK and .NET Core with C\#}.}
       \resumeItemListEnd
       
     \resumeSubheading
@@ -103,30 +113,23 @@
       {Software Engineer - Business Intelligence}{June 2015 - June 2017}
       \resumeItemListStart
         \resumeItem{IFS Business Reporter}
-          {IFS Business Reporter is a reporting and analytics tool that is delivered as a supportive tool for IFS Applications for decision making. This is a Microsoft Excel based tool. I, as a part of the development team was involved in developing the software, fixing customer issues and consulting. C\#, Oracle, PLSQL, Java and Microsoft COM APIs are the technologies involved in this. }
+          {A reporting and analytics tool that is delivered as a supportive tool for IFS Applications for decision making. Technologies: \texttt{C\#, Oracle, PLSQL, Java and Microsoft COM APIs}. }
         \resumeItem{IFS Business Intelligence Tools. }
-          {IFS Business Intelligence is an offering for C-level officers who use IFS Applications. I was involved in the ETL process, OLAP Cube development and Power BI dashboards design. }
+          {An offering for C-level officers who use IFS Applications. Involved in the \texttt{ETL process using SSIS}, \texttt{OLAP Cube development in SSAS} and \texttt{Power BI} dashboards design. }
       \resumeItemListEnd  
       
     \resumeSubheading
       {IFS RnD International}{Colombo, Sri Lanka}
       {Software Engineering Intern}{March 2015 - June 2015}
       \resumeItemListStart
-        {I have Learned IFS core technology and how the IFS Enterprise Explorer desktop client connects with the database to perform tasks in IFS App 8 SP 2. I did a mini project, its a sample manufacturing scenario (consist of inventory, customer order and shop order) and I finished it before deadline. I implemented some usability improvements for IFS Business Analytic Excel Client as well.}
-      \resumeItemListEnd        
-    
-    \resumeSubheading
-      {Xamarin Inc.}{}
-      {Student Ambassador}{February 2015 - August 2015}
-      \resumeItemListStart
-        {Organized meetups related to Xamarin. Helped fellow students on Xamarin technology. Hosted hackathons in university level. Delivered several presentations on Xamarin in Sri Lankan, local meetups.}
-      \resumeItemListEnd     
+        {Trained with IFS core technology and how the IFS Enterprise Explorer desktop client connects with the database to perform tasks in IFS App 8 SP 2. Did a mini project based on IFS Manufacturing. Implemented some usability improvements for IFS Business Analytics}
+      \resumeItemListEnd           
       
     \resumeSubheading
       {Sabaragamuwa University of Sri Lanka}{Belihuloya, Sri Lanka}
-      {Web Developer}{June 2013 - October 2014}
+      {Web Developer}{June 2013 - February 2015}
       \resumeItemListStart
-        {I have developed a Joomla component, that gives administrator of the site to updated details about academic staff in Sabaragamuwa University of Sri Lanka. Under my Head of the Department, I am responsible to perform website updates, taking backups and other website related activities. Joomla was the main technology used.}
+        {Developed a Joomla component, to manage information about academic staff in Sabaragamuwa University of Sri Lanka. Technologies" \texttt{Joomla, PHP and MySQL}.}
       \resumeItemListEnd   
       
   \resumeSubHeadingListEnd
@@ -149,12 +152,10 @@
   \resumeSubHeadingListStart
     \resumeSubItem{GMON}
       {Windows Phone app to assist blind people in their day to day life. Microsoft Imagine Cup 2013 - Sri Lanka 1st runners up.}
-    \resumeSubItem{Power BI - IFS Apps}
-      {Integration of Power BI Dashboard, Reports and Tile with IFS Applications.}
     \resumeSubItem{Recommendation System}
       {POI Recommendation system with Augmented reality for Windows Phone based on social media activities. Published a book on the system. ISBN - 3659590290}
-    \resumeSubItem{Aurora}
-      {Location based CMS developed in ASP.NET using Foursquare API}
+    \resumeSubItem{Easy APIs Project}
+      {A Google cloud application developed entirely on Python which was submitted for Google Cloud Developer Challange 2013 and won 11th place in South Asia region. URL - \href{http://gcdc2013-easyapisproject.appspot.com/}{http://gcdc2013-easyapisproject.appspot.com/}}
   \resumeSubHeadingListEnd
 
 
