--- a/Resume.tex
+++ b/Resume.tex
@@ -71,7 +71,7 @@
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\href{http://ishammohamed.tech/}{\Large Isham Mohamed}} & Email : \href{mailto:ishammohamed@outlook.com}{ishammohamed@outlook.com}\\
   \href{http://programmium.wordpress.com/}{http://programmium.wordpress.com} & \href{https://github.com/ishammohamed}{github.com/ishammohamed} \\
-  \href{https://www.researchgate.net/profile/Mohamed_Iqbal_Mohamed}{https://www.researchgate.net/profile/Mohamed\_Iqbal\_Mohamed} & Mobile : +94 772 977 462 | +60 132 316 7722 \\
+  \href{https://www.researchgate.net/profile/Mohamed_Iqbal_Mohamed}{https://www.researchgate.net/profile/Mohamed\_Iqbal\_Mohamed} &  +94 772 977 462, +60 132 316 722 \\
 \end{tabular*}
 
 
