--- a/Resume.tex
+++ b/Resume.tex
@@ -108,8 +108,7 @@
           {A FaaS offering to ensure the pipeline connectivity in IFS IoT Reference Architecture. Technologies: \texttt{Azure Functions, Azure Service Bus SDK, Azure IoT Devices SDK and .NET Core with C\#}.}
       \resumeItemListEnd
       
-    \resumeSubheading
-      {IFS RnD International}{Colombo, Sri Lanka}
+    \resumeSubheading {}{}
       {Software Engineer - Business Intelligence}{June 2015 - June 2017}
       \resumeItemListStart
         \resumeItem{IFS Business Reporter}
@@ -118,8 +117,7 @@
           {An offering for C-level officers who use IFS Applications. Involved in the \texttt{ETL process using SSIS}, \texttt{OLAP Cube development in SSAS} and \texttt{Power BI} dashboards design. }
       \resumeItemListEnd  
       
-    \resumeSubheading
-      {IFS RnD International}{Colombo, Sri Lanka}
+    \resumeSubheading{}{}
       {Software Engineering Intern}{March 2015 - June 2015}
       \resumeItemListStart
         {Trained with IFS core technology and how the IFS Enterprise Explorer desktop client connects with the database to perform tasks in IFS App 8 SP 2. Did a mini project based on IFS Manufacturing. Implemented some usability improvements for IFS Business Analytics}
