--- a/Resume.tex
+++ b/Resume.tex
@@ -89,7 +89,7 @@
   \resumeSubHeadingListStart
   
     \resumeSubheading
-	  {KloudyNet Technologies SDN BHD}{Kuala Lumpur, Malaysia}
+	  {KloudyNet Technologies Sdn Bhd}{Kuala Lumpur, Malaysia}
 	  {Software Developer - Engineering}{September 2018 - Present}
 	  \resumeItemListStart
 	    \resumeItem{Res Ipsa}
@@ -134,13 +134,9 @@
 
 
 %--------PROGRAMMING SKILLS------------
-\section{Programming Skills}
+\section{Languages and Technologies}
   \resumeSubHeadingListStart
-    \item{
-      \textbf{Languages}{: C\#, SQL, Javascript, Typescript, Python, R}
-      \hfill
-      \textbf{Technologies}{: Azure, Angular, Jenkins, Git}
-    }
+      \texttt{C\#, SQL, PLSQL Javascript, Typescript, Python, R, C, PHP, Azure, Angular, Jenkins, Git, SVN, VSTS MVC, REST API, Xamarin, Mongo DB, Linux, Arduino, Raspberry Pi.}
   \resumeSubHeadingListEnd
 
 
