--- a/Resume.tex
+++ b/Resume.tex
@@ -69,11 +69,10 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{http://ishammohamed.tech/}{\Large Isham Mohamed}} & Email : \href{mailto:ishammohamed@outlook.com}{ishammohamed@outlook.com}\\
-  \href{http://programmium.wordpress.com/}{http://programmium.wordpress.com} & \href{https://github.com/ishammohamed}{github.com/ishammohamed} \\
-  \href{https://www.researchgate.net/profile/Mohamed_Iqbal_Mohamed}{https://www.researchgate.net/profile/Mohamed\_Iqbal\_Mohamed} &  +94 772 977 462, +60 132 316 722 \\
+  \textbf{\href{http://ishammohamed.tech/}{\Large Isham Mohamed}} & \href{mailto:ishammohamed@outlook.com}{ishammohamed@outlook.com}\\
+  A goal-oriented engineer, helping organizations adopt Cloud, AI and IoT easily. & \href{https://github.com/ishammohamed}{github.com/ishammohamed} \\
+  \href{http://programmium.wordpress.com/}{programmium.wordpress.com} &  +94 772 977 462, +60 132 316 722 \\
 \end{tabular*}
-
 
 %-----------EDUCATION-----------------
 \section{Education}
@@ -82,7 +81,6 @@
       {Sabaragamuwa University of Sri Lanka}{Belihuloya, Sri Lanka}
       {Bachelor of Science in Computing and Information Systems (spcl)}{2011 -- 2015}
   \resumeSubHeadingListEnd
-
 
 %-----------EXPERIENCE-----------------
 \section{Experience}
