Corrected grammatical mistake

--- a/Resume.tex
+++ b/Resume.tex
@@ -70,7 +70,7 @@
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\href{http://ishammohamed.tech/}{\Large Isham Mohamed}} & \href{mailto:ishammohamed@outlook.com}{ishammohamed@outlook.com}\\
-  An earnest engineer, help to solve complex problems with Cloud, AI and IoT. & \href{https://github.com/ishammohamed}{github.com/ishammohamed} \\
+  An earnest engineer, helps to solve complex problems with Cloud, AI and IoT. & \href{https://github.com/ishammohamed}{github.com/ishammohamed} \\
   \href{http://programmium.wordpress.com/}{programmium.wordpress.com} &  +94 772 977 462, +60 132 316 722 \\
 \end{tabular*}
 
