--- a/Resume.tex
+++ b/Resume.tex
@@ -1,5 +1,5 @@
 
-\documentclass[letterpaper,11pt]{article}
+\documentclass[a4paper,11pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -71,7 +71,7 @@
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\href{http://ishammohamed.tech/}{\Large Isham Mohamed}} & \href{mailto:ishammohamed@outlook.com}{ishammohamed@outlook.com}\\
   An earnest engineer, helps to solve complex problems with Cloud, AI and IoT. & \href{https://github.com/ishammohamed}{github.com/ishammohamed} \\
-  \href{http://programmium.wordpress.com/}{programmium.wordpress.com} &  +94 772 977 462, +60 132 316 722 \\
+  \href{http://programmium.wordpress.com/}{programmium.wordpress.com} & +60 132 316 722 \\
 \end{tabular*}
 
 %-----------EDUCATION-----------------
@@ -88,10 +88,12 @@
   
     \resumeSubheading
 	  {KloudyNet Technologies Sdn Bhd}{Kuala Lumpur, Malaysia}
-	  {Software Developer - Engineering}{September 2018 - Present}
+	  {Software Consultant - Engineering}{September 2018 - Present}
 	  \resumeItemListStart
 	    \resumeItem{Res Ipsa}
-		  {An Artificial Intellitent infused Bot, for Legal domain. Built on top of Microsoft Azure cloud, with Azure Search and Azure Cognitive Services. Buit for the LawTechHack2018, Malaysia and won One million worth cloud credits for the project.}
+		  {An Artificial Intellitent infused Bot, for Legal domain. Built on top of Microsoft Azure cloud, with Azure Search and Azure Cognitive Services. Technologies: \texttt{Microsoft Bot Framework 4.0, Azure Search, Azure Cognitive Services, .NET Core Web API, EF Core}.}
+		\resumeItem{UEM Plus Digital Transformation Workflow Systems}
+		  {Architectured and developed Two Microsoft SharePoint Web Parts and three Microsoft Kaizala custom actions. Technologies: \texttt{SharePoint REST API, React, Office UI Fabric, TypeScript, AAD Authentiocation}.}
 	  \resumeItemListEnd
   
     \resumeSubheading
@@ -148,6 +150,12 @@
       {POI Recommendation system with Augmented reality for Windows Phone based on social media activities. Published a book on the system. ISBN - 3659590290}
     \resumeSubItem{Easy APIs Project}
       {A Google cloud application developed entirely on Python which was submitted for Google Cloud Developer Challange 2013 and won 11th place in South Asia region. URL - \href{http://gcdc2013-easyapisproject.appspot.com/}{http://gcdc2013-easyapisproject.appspot.com/}}
+    \resumeSubItem{Microsoft Edge Computing PoC}
+      {Developed a PoC to benchmark the capabilities of Microsoft IoT Edge computing. Also this PoC was used as a Demo for certain sales conferences to showcase how MODBUS and OPC/UA data can be leveraged to Microsoft Azure Cloud.}
+    \resumeSubItem{Auto User Provisioning Workflow}
+      {The system was intended to be used in Kloudynet for the internal usage and demo purposed while customer presentations. The system will automatically provision a new user when the same user is being created in Workday HCM solution. Later using Microsoft Graph API the user will be assigned with an Office 365 licence, which is determined automatically.}
+    \resumeSubItem{SharePoint Collections and MS Graph Bridge for Kaizala}
+      {Microsoft Kaizala is a 100\% client side tool and can not initiate server-to-server authentiocation, while Microsoft SharePoint and MS Graph API requires a server's involvement. So, I have developed a .NET Core Web API, which functions as a connector for SharePoint collections and MS Graph API from Microsoft Kaizala.}
   \resumeSubHeadingListEnd
 
 
