--- a/Resume.tex
+++ b/Resume.tex
@@ -70,8 +70,7 @@
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\href{http://ishammohamed.tech/}{\Large Isham Mohamed}} & \href{mailto:ishammohamed@outlook.com}{ishammohamed@outlook.com}\\
-  An earnest engineer, helps to solve complex problems with Cloud, AI and IoT. & \href{https://github.com/ishammohamed}{github.com/ishammohamed} \\
-  \href{http://programmium.wordpress.com/}{programmium.wordpress.com} & +60 132 316 722 \\
+  An enthusiastic and earnest engineer, seeking an& \href{https://github.com/ishammohamed}{github.com/ishammohamed} \\opportunity to work in an environment hat utilizes& +60 132 316 722 \\the skills and abilities that are demonstrated to be & \href{http://programmium.wordpress.com/}{programmium.wordpress.com}\\necessary for the duties performed
 \end{tabular*}
 
 %-----------EDUCATION-----------------
@@ -85,15 +84,23 @@
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
-  
     \resumeSubheading
-	  {KloudyNet Technologies Sdn Bhd}{Kuala Lumpur, Malaysia}
-	  {Software Consultant - Engineering}{September 2018 - Present}
+      {KloudyNet Technologies Sdn Bhd}{Kuala Lumpur, Malaysia}
+	  {Senior Software Developer - Engineering}{September 2019 - Present}
+	  \resumeItemListStart
+	    \resumeItem{Azure Governance tool}
+		  {Yet to be launched. Involved in the architecture and development of a .NET Core Web API project, hosted on Service Fabric and a supporting Bot, hosted on Azure Bot framework. The tool relies on Azure ARM REST APIs to help companies to adopt to Microsoft CAF (Cloud Adoption Framework) and better understand the spend on Azure cloud resources and helps to reduce unnecessary costs by deploying resources via Azure Blueprints and workflow.}
+	  \resumeItemListEnd
+    \resumeSubheading
+	  {}{}
+	  {Software Developer - Engineering}{September 2018 - September 2019}
 	  \resumeItemListStart
 	    \resumeItem{Res Ipsa}
-		  {An Artificial Intellitent infused Bot, for Legal domain. Built on top of Microsoft Azure cloud, with Azure Search and Azure Cognitive Services. Technologies: \texttt{Microsoft Bot Framework 4.0, Azure Search, Azure Cognitive Services, .NET Core Web API, EF Core}.}
+		  {An Artificial Intelligent infused Bot, for Legal domain. Built on top of Microsoft Azure cloud, with Azure Search and Azure Cognitive Services. Technologies: \texttt{Microsoft Bot Framework 4.0, Azure Search, Azure Cognitive Services, .NET Core Web API, EF Core}.}
 		\resumeItem{UEM Plus Digital Transformation Workflow Systems}
-		  {Architectured and developed Two Microsoft SharePoint Web Parts and three Microsoft Kaizala custom actions. Technologies: \texttt{SharePoint REST API, React, Office UI Fabric, TypeScript, AAD Authentiocation}.}
+		  {Architectured and developed Two Microsoft SharePoint Web Parts and three Microsoft Kaizala custom actions. Technologies: \texttt{SharePoint REST API, React, Office UI Fabric, TypeScript, AAD Authentication}. This project was funded by Microsoft under ECIF funding}
+		\resumeItem{Involvement in several Solutions and PoC developments}
+		  {Involved in the solution architecture and proof of concept development of various systems, involving technology stack using \texttt{Kaizala Client, Kaizala REST API, Microsoft Graph API, Microsoft Teams Development Platform, SharePoint, Azure Table Storage, Azure SQL Manages instances, Azure Logic Apps, Azure Functions, Azure API Management, Azure Monitoring, Azure Cognitive Services and .NET Core} as a part of the Microsoft partnership and pre-sales activities. Also conducted several workshops and hands on sessions on Microsoft cloud development stack. Refer "Solutions Architectured and Developed" for more details.}
 	  \resumeItemListEnd
   
     \resumeSubheading
@@ -103,7 +110,7 @@
         \resumeItem{IFS IoT Discovery Manager}
           {IFS IoT Discovery Manager is a tool which is a part of the IFS IoT offering. This tool can be used to create, monitor and manage Microsoft Azure resources relevant to IoT such as IoTHub, Stream Analytics, ServiceBus Queue, Event Hubs etc on top of customer's Azure subscription. Technologies: \texttt{Microsoft ASP.NET MVC, Angular JS, Azure SQL, Microsoft ARM APIs. Microsoft Graph and AAD Graph}.}
         \resumeItem{IFS IoT Gateway Service}
-          {Deliveredelivered as a Windows Service, an Azure Worker Role service and as an Azure Function via the delivery of IFS IoT offering. Migrated the Windows Service to Azure Work Role service and to Azure Functions. Technologies: \texttt{Azure Worker Role, Azure Functions, Azure Application Insights, Azure Service Bus SDK, Azure IoT Devices SDK and .NET Full with C\#}. }
+          {Delivered as a Windows Service, an Azure Worker Role service and as an Azure Function via the delivery of IFS IoT offering. Migrated the Windows Service to Azure Work Role service and to Azure Functions. Technologies: \texttt{Azure Worker Role, Azure Functions, Azure Application Insights, Azure Service Bus SDK, Azure IoT Devices SDK and .NET Full with C\#}. }
         \resumeItem{IFS IoT Heartbeat Functions}
           {A FaaS offering to ensure the pipeline connectivity in IFS IoT Reference Architecture. Technologies: \texttt{Azure Functions, Azure Service Bus SDK, Azure IoT Devices SDK and .NET Core with C\#}.}
       \resumeItemListEnd
@@ -112,9 +119,9 @@
       {Software Engineer - Business Intelligence}{June 2015 - June 2017}
       \resumeItemListStart
         \resumeItem{IFS Business Reporter}
-          {A reporting and analytics tool that is delivered as a supportive tool for IFS Applications for decision making. Technologies: \texttt{C\#, Oracle, PLSQL, Java and Microsoft COM APIs}. }
+          {A reporting and analytics tool that is delivered as a supportive tool for IFS Applications for decision making. Technologies: \texttt{C\#, Oracle, PLSQL, Java and Microsoft COM APIs}. Worked on enabling IFS Business Reporter for \texttt{Azure RemoteApp} (now discontinued).}
         \resumeItem{IFS Business Intelligence Tools. }
-          {An offering for C-level officers who use IFS Applications. Involved in the \texttt{ETL process using SSIS}, \texttt{OLAP Cube development in SSAS} and \texttt{Power BI} dashboards design. }
+          {An offering for C-level officers who use IFS Applications. Involved in the \texttt{ETL process using SSIS}, \texttt{OLAP Cube development in SSAS} and \texttt{Power BI} dashboards design. Did a PoC on migrating IFS Business Intelligence OLAP cubes to  \texttt{Azure Analysis Services}.}
       \resumeItemListEnd  
       
     \resumeSubheading{}{}
@@ -136,28 +143,52 @@
 %--------PROGRAMMING SKILLS------------
 \section{Languages and Technologies}
   \resumeSubHeadingListStart
-      \texttt{C\#, SQL, PLSQL Javascript, Typescript, Python, R, C, PHP, Azure, Angular, Jenkins, Git, SVN, VSTS MVC, REST API, Xamarin, Mongo DB, Linux, Arduino, Raspberry Pi.}
+      \texttt{C\#, SQL, PLSQL, Javascript, Typescript, Python, Azure, Angular JS, Jenkins, Git, SVN, VSTS, MVC, REST API, Xamarin, Mongo DB, Linux, Arduino, Raspberry Pi.}
   \resumeSubHeadingListEnd
 
 
 
 %-----------PROJECTS-----------------
-\section{Projects}
+\section{Solutions Architectured and Developed}
   \resumeSubHeadingListStart
     \resumeSubItem{GMON}
       {Windows Phone app to assist blind people in their day to day life. Microsoft Imagine Cup 2013 - Sri Lanka 1st runners up.}
     \resumeSubItem{Recommendation System}
       {POI Recommendation system with Augmented reality for Windows Phone based on social media activities. Published a book on the system. ISBN - 3659590290}
     \resumeSubItem{Easy APIs Project}
-      {A Google cloud application developed entirely on Python which was submitted for Google Cloud Developer Challange 2013 and won 11th place in South Asia region. URL - \href{http://gcdc2013-easyapisproject.appspot.com/}{http://gcdc2013-easyapisproject.appspot.com/}}
+      {A Google cloud application developed entirely on Python which was submitted for Google Cloud Developer Challenge 2013 and won 11th place in South Asia region. URL - \href{http://gcdc2013-easyapisproject.appspot.com/}{http://gcdc2013-easyapisproject.appspot.com/}}
     \resumeSubItem{Microsoft Edge Computing PoC}
       {Developed a PoC to benchmark the capabilities of Microsoft IoT Edge computing. Also this PoC was used as a Demo for certain sales conferences to showcase how MODBUS and OPC/UA data can be leveraged to Microsoft Azure Cloud.}
-    \resumeSubItem{Auto User Provisioning Workflow}
-      {The system was intended to be used in Kloudynet for the internal usage and demo purposed while customer presentations. The system will automatically provision a new user when the same user is being created in Workday HCM solution. Later using Microsoft Graph API the user will be assigned with an Office 365 licence, which is determined automatically.}
     \resumeSubItem{SharePoint Collections and MS Graph Bridge for Kaizala}
-      {Microsoft Kaizala is a 100\% client side tool and can not initiate server-to-server authentiocation, while Microsoft SharePoint and MS Graph API requires a server's involvement. So, I have developed a .NET Core Web API, which functions as a connector for SharePoint collections and MS Graph API from Microsoft Kaizala.}
+      {Microsoft Kaizala is a 100\% client side tool and can not initiate server-to-server authentication, while Microsoft SharePoint and MS Graph API requires a server's involvement. So, I have developed a .NET Core Web API, which functions as a connector for SharePoint collections and MS Graph API from Microsoft Kaizala.}
+    \resumeSubItem{Content Moderator and FAQ Chatbot PoC for Grab Taxi - Singapore}
+      {As a part of pre-sales activity, the PoC was developed using \texttt{Azure Content Modreator, Azure QnA Service, Power BI, Azure Functions, Kaizala REST APIs} for the content moderator. The purpose of the solution is to monitor and moderate the messages being shared in Grab Drivers group in Kaizala. The PoC for chatbot was developed using \texttt{Azure Logic Apps, Azure QnA Service, Azur   LUIS and .NET core}.}
+    \resumeSubItem{Sentiment Analysis Connector for       Microsoft Teams}{The tool was   developed to push   Microsoft Teams action card to a specific channel   whenever   a negative tweet was posted with a       specific hashtag. This solution was developed for a demo at Microsoft M365 day in Kuala Lumpur on 6th Aug 2019.   \texttt{Azure Logic Apps, Azure SQL Managed Instance, Microsoft Teams SDK and Azure Text Analytics} are the tool used.}
   \resumeSubHeadingListEnd
 
-
+%-----------TRAININGS-----------------
+\section{Trainings, Workshops and Presentations Conducted}
+  \resumeSubHeadingListStart
+    \resumeSubItem{Microsoft Cloud Workshop on Azure Serverless}
+      {Microsoft Cloud Workshop is a set of well curated instructions. As a Microsoft Partner, Kloudynet Technologies conducted Microsoft Cloud Workshop on Azure Serverless at Microsoft Malaysia, Menara Shell, Kuala Lumpur on 14th of August 2019. I was the host and facilitator of the event. The event covered the topics on \texttt{Azure Functions, Azure Event Grid, Azure Logic Apps, Azure Cosmos DB and other Azure Serverless offerings}.}
+    \resumeSubItem{Microsoft M365 - Discovery Day}
+      {Delivered a session on how to develop Microsoft Teams connector for Twitter sentiment detection using \texttt{Azure Text Analytics and Microsoft Teams Development Platform}. The session was held at G Tower, Kuala Lumpur, Malaysia on 06th of August 2019. Organized by Microsoft Malaysia.}
+    \resumeSubItem{FOSS Asia Summit}
+      {Presented a session on Edge computing using \texttt{Eclipse Kura, Docker and Raspberry PI} at FOSS Asia summit at Singapore on 16th March 2019. FOSS Asia summit is an annual conference focusing on Free and Open Source Software and other related technologies}
+    \resumeSubItem{Guest Lecture on IoT, University of Kelaniya, Sri Lanka}
+      {Was invited to deliver a guest lecture on IoT for the 4th year students of Faculty of Commerce & Management Studies, University of Kelaniya on 2017}
+    \resumeSubItem{Microsoft Dot NET Forum, Sri Lanka}
+      {Presented various sessions on Microsoft Technologies in Microsoft Dot NET Forum from 2015 - 2018, which is a community event hosted by Microsoft Sri Lanka.}
+    \resumeSubItem{Microsoft Champs, Sri Lanka}
+      {As a Microsoft Student Partner conducted several presentations on Microsoft technologies in the monthly Microsoft Champs meetup happened in Colombo, Sri Lanka}
+  \resumeSubHeadingListEnd
+  
+%-----------RESEARCH-----------------
+\section{Research and Conference Proceedings}
+  \resumeSubHeadingListStart
+    \resumeSubItem{KDU INTERNATIONAL RESEARCH
+     CONFERENCE 2017}
+      {Title : Analysis of Systematic Data Mining Approaches for Achieving Competitive
+      Advantage by Monitoring Social Media. Date: August 2017}
 %-------------------------------------------
 \end{document}
