--- a/Resume.tex
+++ b/Resume.tex
@@ -89,7 +89,7 @@
 	  {Senior Software Developer - Engineering}{September 2019 - Present}
 	  \resumeItemListStart
 	    \resumeItem{Azure Governance tool}
-		  {Yet to be launched. Involved in the architecture and development of a .NET Core Web API project, hosted on Service Fabric and a supporting Bot, hosted on Azure Bot framework. The tool relies on Azure ARM REST APIs to help companies to adopt to Microsoft CAF (Cloud Adoption Framework) and better understand the spend on Azure cloud resources and helps to reduce unnecessary costs by deploying resources via Azure Blueprints and workflow.}
+		  {Yet to be launched. Involved in the architecture and development of a .NET Core Web API project on top of Azure Service Fabric and a supporting Bot, hosted on Azure Bot framework. The tool relies on Azure ARM REST APIs to help companies to adopt to Microsoft CAF (Cloud Adoption Framework) and better understand the spend on Azure cloud resources and helps to reduce unnecessary costs by deploying resources via Azure Blueprints and workflow.}
 	  \resumeItemListEnd
     \resumeSubheading
 	  {}{}
