--- a/Resume.tex
+++ b/Resume.tex
@@ -173,10 +173,10 @@
       {Microsoft Cloud Workshop is a set of well curated instructions. As a Microsoft Partner, Kloudynet Technologies conducted Microsoft Cloud Workshop on Azure Serverless at Microsoft Malaysia, Menara Shell, Kuala Lumpur on 14th of August 2019. I was the host and facilitator of the event. The event covered the topics on \texttt{Azure Functions, Azure Event Grid, Azure Logic Apps, Azure Cosmos DB and other Azure Serverless offerings}.}
     \resumeSubItem{Microsoft M365 - Discovery Day}
       {Delivered a session on how to develop Microsoft Teams connector for Twitter sentiment detection using \texttt{Azure Text Analytics and Microsoft Teams Development Platform}. The session was held at G Tower, Kuala Lumpur, Malaysia on 06th of August 2019. Organized by Microsoft Malaysia.}
+    \resumeSubItem{Microsoft App Modernization Day}
+      {Delivered a session on "Consolidating Infrastructure with \texttt{Azure Kubernetes Services}". The session was held at EQ Hotel, Kuala Lumpur, Malaysia on 12th of December 2019. Organized by Microsoft Malaysia.}
     \resumeSubItem{FOSS Asia Summit}
-      {Presented a session on Edge computing using \texttt{Eclipse Kura, Docker and Raspberry PI} at FOSS Asia summit at Singapore on 16th March 2019. FOSS Asia summit is an annual conference focusing on Free and Open Source Software and other related technologies}
-    \resumeSubItem{Guest Lecture on IoT, University of Kelaniya, Sri Lanka}
-      {Was invited to deliver a guest lecture on IoT for the 4th year students of Faculty of Commerce & Management Studies, University of Kelaniya on 2017}
+      {Presented a session on Edge computing using \texttt{Eclipse Kura, Docker and Raspberry PI} at FOSS Asia summit at Singapore on 16th March 2019.}
     \resumeSubItem{Microsoft Dot NET Forum, Sri Lanka}
       {Presented various sessions on Microsoft Technologies in Microsoft Dot NET Forum from 2015 - 2018, which is a community event hosted by Microsoft Sri Lanka.}
     \resumeSubItem{Microsoft Champs, Sri Lanka}
