--- a/Resume.tex
+++ b/Resume.tex
@@ -86,17 +86,22 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {KloudyNet Technologies Sdn Bhd}{Kuala Lumpur, Malaysia}
-	  {Senior Software Developer - Engineering}{September 2019 - Present}
+	  {Lead Software Developer - Engineering}{May 2020 - Present}
+	  \resumeItemListStart
+		\resumeItem{Vessel management system for field workers - Jurong Port, Singapore}
+		  {Project on-going. Developed in Microsoft messaging platform using Kaizala with the backend developed in .NET core as a Web API, which integrates the front-end Kaizala actions with JPonline.}
+	  \resumeItemListEnd
+    \resumeSubheading
+      {}{}
+	  {Senior Software Developer - Engineering}{September 2019 - May 2020}
 	  \resumeItemListStart
 	    \resumeItem{Azure Governance tool}
-		  {Yet to be launched. Involved in the architecture and development of a .NET Core Web API project on top of Azure Service Fabric and a supporting Bot, hosted on Azure Bot framework. The tool relies on Azure ARM REST APIs to help companies to adopt to Microsoft CAF (Cloud Adoption Framework) and better understand the spend on Azure cloud resources and helps to reduce unnecessary costs by deploying resources via Azure Blueprints and workflow.}
+		  {Involved in the architecture and development of a .NET Core API project hosted on Azure Service Fabric and a supporting Bot, hosted on Azure Bot framework. The tool relies on Azure ARM REST APIs to help enterprises to adopt to Microsoft CAF (Cloud Adoption Framework) and better understand the spend on Azure cloud resources and helps to reduce unnecessary costs by deploying resources via Azure Blueprints and workflow.}
 	  \resumeItemListEnd
     \resumeSubheading
 	  {}{}
 	  {Software Developer - Engineering}{September 2018 - September 2019}
 	  \resumeItemListStart
-	    \resumeItem{Res Ipsa}
-		  {An Artificial Intelligent infused Bot, for Legal domain. Built on top of Microsoft Azure cloud, with Azure Search and Azure Cognitive Services. Technologies: \texttt{Microsoft Bot Framework 4.0, Azure Search, Azure Cognitive Services, .NET Core Web API, EF Core}.}
 		\resumeItem{UEM Plus Digital Transformation Workflow Systems}
 		  {Architectured and developed Two Microsoft SharePoint Web Parts and three Microsoft Kaizala custom actions. Technologies: \texttt{SharePoint REST API, React, Office UI Fabric, TypeScript, AAD Authentication}. This project was funded by Microsoft under ECIF funding}
 		\resumeItem{Involvement in several Solutions and PoC developments}
