--- a/Resume.tex
+++ b/Resume.tex
@@ -88,24 +88,38 @@
       {KloudyNet Technologies Sdn Bhd}{Kuala Lumpur, Malaysia}
 	  {Lead Software Developer - Engineering}{May 2020 - Present}
 	  \resumeItemListStart
-		\resumeItem{Vessel management system for field workers - Jurong Port, Singapore}
-		  {Project on-going. Developed in Microsoft messaging platform using Kaizala with the backend developed in .NET core as a Web API, which integrates the front-end Kaizala actions with JPonline.}
+		\resumeItem{Vessel Management System for Field Workers - Jurong Port, Singapore}
+		  {Developed on top of Microsoft messaging platform using \texttt{Microsoft Kaizala} with the backend developed in \texttt{C\#} and \texttt{.NET core} as a Web API, which integrates the front-end Kaizala actions with JPonline.}
+		\resumeItem{Auto-translated Communication System for Factory Workers - Sony, Penang}
+		  {Developed a supportive API for \texttt{Microsoft Kaizala} using to auto-translate the announcements from the management to factory workers in their preferred language and the feedback from factory workers to the management from the preferred language of the worker to English, where this communication happens in \texttt{Microsoft Kaizala}. System leverages a \texttt{C\#} based Web API to communicate with \texttt{Azure Cognitive Services API} to get the translated text content.}
+		\resumeItem{Routine Maintenance Management System - Prolintas Highways}
+		  {\texttt{Microsoft Kaizala} based project to remind the field workers for an upcoming routine maintenance task and submit data related to an already done routine maintenance to the management. This is an integration project which involves, \texttt{Microsoft Kaizala, Microsoft Planner, Microsoft SharePoint and Web API hosted on Microsoft Azure, developed using C\# and .NET Core.}}
+		\resumeItem{Kloudsecure}{Kloudsecure is a Kubernetes based cloud agnostic cybersecurity tool and CISO dashboard for Enterprises using multi-cloud technologies. My involvement is in the design and implementation of \texttt{AWS Security Hub} related development. Used technologies such as \texttt{C\#, .NET Core 3.1, React, Docker and Kubernetes}}
+		\resumeItem{Leadership}
+		  {Lead a team of four members and mentored them in the technological aspect for the above mentioned projects. Involved in solutions architecture and code reviews. Mentored an intern}
 	  \resumeItemListEnd
     \resumeSubheading
       {}{}
 	  {Senior Software Developer - Engineering}{September 2019 - May 2020}
 	  \resumeItemListStart
-	    \resumeItem{Azure Governance tool}
-		  {Involved in the architecture and development of a .NET Core API project hosted on Azure Service Fabric and a supporting Bot, hosted on Azure Bot framework. The tool relies on Azure ARM REST APIs to help enterprises to adopt to Microsoft CAF (Cloud Adoption Framework) and better understand the spend on Azure cloud resources and helps to reduce unnecessary costs by deploying resources via Azure Blueprints and workflow.}
+	    \resumeItem{Kloudsifu}
+		  {Kloudsifu is a Microsoft Azure based tool to help Enterprises to adopt to \texttt{Microsoft CAF} (Cloud Adoption Framework) and better understand the spend on Azure cloud resources and helps to reduce unnecessary costs by deploying resources via \texttt{Azure Blueprints} and workflow.. Involve in the development of Kloudsifu, developed components using \texttt{C\# and .NET Core, which relied on Azure ARM REST APIs}}
+		  \resumeSubItem{Content Moderator and FAQ Chatbot PoC for Grab Taxi - Singapore}
+      {As a part of pre-sales activity, the PoC was developed using \texttt{C\#, Azure Content Moderator, Azure QnA Service, Power BI, Azure Functions, Kaizala REST APIs} for the content moderator. The purpose of the solution is to monitor and moderate the messages being shared in Grab Drivers group in Kaizala. The PoC for chatbot was developed using \texttt{Azure Logic Apps, Azure QnA Service, Azure   LUIS and .NET core}.}
+    \resumeSubItem{Sentiment Analysis Connector for Microsoft Teams}{The tool was   developed to push Microsoft Teams action card to a specific channel whenever a negative tweet was posted with a specific hashtag. This solution was developed for a demo at Microsoft M365 day in Kuala Lumpur on 6th Aug 2019.   \texttt{Azure Logic Apps, Azure SQL Managed Instance, Microsoft Teams SDK and Azure Text Analytics} are the tool used.}
 	  \resumeItemListEnd
     \resumeSubheading
 	  {}{}
 	  {Software Developer - Engineering}{September 2018 - September 2019}
 	  \resumeItemListStart
+	    \resumeItem{Kloudsifu}
+		  {Involved in the architecture and development of a .NET Core API project hosted on Azure Service Fabric and a supporting Bot, hosted on Azure Bot framework.}
 		\resumeItem{UEM Plus Digital Transformation Workflow Systems}
 		  {Architectured and developed Two Microsoft SharePoint Web Parts and three Microsoft Kaizala custom actions. Technologies: \texttt{SharePoint REST API, React, Office UI Fabric, TypeScript, AAD Authentication}. This project was funded by Microsoft under ECIF funding}
-		\resumeItem{Involvement in several Solutions and PoC developments}
-		  {Involved in the solution architecture and proof of concept development of various systems, involving technology stack using \texttt{Kaizala Client, Kaizala REST API, Microsoft Graph API, Microsoft Teams Development Platform, SharePoint, Azure Table Storage, Azure SQL Manages instances, Azure Logic Apps, Azure Functions, Azure API Management, Azure Monitoring, Azure Cognitive Services and .NET Core} as a part of the Microsoft partnership and pre-sales activities. Also conducted several workshops and hands on sessions on Microsoft cloud development stack. Refer "Solutions Architectured and Developed" for more details.}
+		\resumeSubItem{SharePoint Collections and MS Graph Bridge for Kaizala}
+      {Microsoft Kaizala is a 100\% client side tool and can not initiate server-to-server authentication, while Microsoft SharePoint and MS Graph API requires a server's involvement. So, I have developed a .NET Core Web API, which functions as a connector for SharePoint collections and MS Graph API from Microsoft Kaizala.}
+		\resumeItem{Involvement in PoC development}
+		  {Involved in the solution architecture and proof of concept development of various systems, involving technology stack using \texttt{Kaizala Client, Kaizala REST API, Microsoft Graph API, Microsoft Teams Development Platform, SharePoint, Azure Table Storage, Azure SQL Manages instances, Azure Logic Apps, Azure Functions, Azure API Management, Azure Monitoring, Azure Cognitive Services, C\# and .NET Core} as a part of the Microsoft partnership and pre-sales activities. Also conducted several workshops and hands on sessions on Microsoft cloud development stack.}
 	  \resumeItemListEnd
   
     \resumeSubheading
@@ -113,11 +127,13 @@
       {Software Engineer - IoT}{June 2017 - September 2018}
       \resumeItemListStart
         \resumeItem{IFS IoT Discovery Manager}
-          {IFS IoT Discovery Manager is a tool which is a part of the IFS IoT offering. This tool can be used to create, monitor and manage Microsoft Azure resources relevant to IoT such as IoTHub, Stream Analytics, ServiceBus Queue, Event Hubs etc on top of customer's Azure subscription. Technologies: \texttt{Microsoft ASP.NET MVC, Angular JS, Azure SQL, Microsoft ARM APIs. Microsoft Graph and AAD Graph}.}
+          {IFS IoT Discovery Manager is a tool which is a part of the IFS IoT offering. This tool can be used to create, monitor and manage Microsoft Azure resources relevant to IoT such as IoTHub, Stream Analytics, ServiceBus Queue, Event Hubs etc on top of customer's Azure subscription. Technologies: \texttt{C\#, Microsoft ASP.NET MVC, Angular JS, Azure SQL, Azure ARM APIs, Microsoft Graph API and AAD Graph API}.}
         \resumeItem{IFS IoT Gateway Service}
-          {Delivered as a Windows Service, an Azure Worker Role service and as an Azure Function via the delivery of IFS IoT offering. Migrated the Windows Service to Azure Work Role service and to Azure Functions. Technologies: \texttt{Azure Worker Role, Azure Functions, Azure Application Insights, Azure Service Bus SDK, Azure IoT Devices SDK and .NET Full with C\#}. }
+          {Delivered as a Windows Service, an Azure Worker Role service and as an Azure Function via the delivery of IFS IoT offering. Migrated the Windows Service to Azure Work Role service and to Azure Functions. Technologies: \texttt{Azure Worker Role, Azure Functions, Azure Application Insights, Azure Service Bus SDK, Azure IoT Devices SDK and .NET Framework with C\#}. }
         \resumeItem{IFS IoT Heartbeat Functions}
           {A FaaS offering to ensure the pipeline connectivity in IFS IoT Reference Architecture. Technologies: \texttt{Azure Functions, Azure Service Bus SDK, Azure IoT Devices SDK and .NET Core with C\#}.}
+          \resumeSubItem{Microsoft Edge Computing PoC}
+      {Developed a PoC to benchmark the capabilities of Microsoft IoT Edge computing. Also this PoC was used as a Demo for certain sales conferences to showcase how \texttt{MODBUS} and \texttt{OPC/UA} data can be leveraged to Microsoft Azure Cloud.}
       \resumeItemListEnd
       
     \resumeSubheading {}{}
@@ -132,7 +148,7 @@
     \resumeSubheading{}{}
       {Software Engineering Intern}{March 2015 - June 2015}
       \resumeItemListStart
-        {Trained with IFS core technology and how the IFS Enterprise Explorer desktop client connects with the database to perform tasks in IFS App 8 SP 2. Did a mini project based on IFS Manufacturing. Implemented some usability improvements for IFS Business Analytics}
+        {Trained with IFS core technology and how the IFS Enterprise Explorer desktop client connects with the database to perform tasks in IFS App 8 SP 2. Did a mini project based on IFS Manufacturing. Implemented some usability improvements for IFS Business Analytics using \texttt{C\#, .NET Framework and IFS Framework}}
       \resumeItemListEnd           
       
     \resumeSubheading
@@ -148,7 +164,7 @@
 %--------PROGRAMMING SKILLS------------
 \section{Languages and Technologies}
   \resumeSubHeadingListStart
-      \texttt{C\#, SQL, PLSQL, Javascript, Typescript, Python, Azure, Angular JS, Jenkins, Git, SVN, VSTS, MVC, REST API, Xamarin, Mongo DB, Linux, Arduino, Raspberry Pi.}
+      \texttt{C\#, SQL Server, Mongo DB, Azure, GCP, ASPNET Core, ASPNET, X-Unit, Redis, React, Redux, Angular JS, jQuery, Azure DevOps, Git, Docker, Kubernetes, Linux, SharePoint}
   \resumeSubHeadingListEnd
 
 
@@ -162,26 +178,30 @@
       {POI Recommendation system with Augmented reality for Windows Phone based on social media activities. Published a book on the system. ISBN - 3659590290}
     \resumeSubItem{Easy APIs Project}
       {A Google cloud application developed entirely on Python which was submitted for Google Cloud Developer Challenge 2013 and won 11th place in South Asia region. URL - \href{http://gcdc2013-easyapisproject.appspot.com/}{http://gcdc2013-easyapisproject.appspot.com/}}
-    \resumeSubItem{Microsoft Edge Computing PoC}
-      {Developed a PoC to benchmark the capabilities of Microsoft IoT Edge computing. Also this PoC was used as a Demo for certain sales conferences to showcase how MODBUS and OPC/UA data can be leveraged to Microsoft Azure Cloud.}
-    \resumeSubItem{SharePoint Collections and MS Graph Bridge for Kaizala}
-      {Microsoft Kaizala is a 100\% client side tool and can not initiate server-to-server authentication, while Microsoft SharePoint and MS Graph API requires a server's involvement. So, I have developed a .NET Core Web API, which functions as a connector for SharePoint collections and MS Graph API from Microsoft Kaizala.}
-    \resumeSubItem{Content Moderator and FAQ Chatbot PoC for Grab Taxi - Singapore}
-      {As a part of pre-sales activity, the PoC was developed using \texttt{Azure Content Modreator, Azure QnA Service, Power BI, Azure Functions, Kaizala REST APIs} for the content moderator. The purpose of the solution is to monitor and moderate the messages being shared in Grab Drivers group in Kaizala. The PoC for chatbot was developed using \texttt{Azure Logic Apps, Azure QnA Service, Azur   LUIS and .NET core}.}
-    \resumeSubItem{Sentiment Analysis Connector for       Microsoft Teams}{The tool was   developed to push   Microsoft Teams action card to a specific channel   whenever   a negative tweet was posted with a       specific hashtag. This solution was developed for a demo at Microsoft M365 day in Kuala Lumpur on 6th Aug 2019.   \texttt{Azure Logic Apps, Azure SQL Managed Instance, Microsoft Teams SDK and Azure Text Analytics} are the tool used.}
+    \resumeSubItem{Res-Ipsa}
+      {An automated assistant to answer your questions on legal domain. Developed this bot for a hackathon in 2018.}
+    \resumeSubItem{Stop Dengue}
+      {A mobile application to report and trace active dengue cases. Developed this bot for a Microsoft Youthspark competition in 2014 .}
+    
   \resumeSubHeadingListEnd
 
 %-----------TRAININGS-----------------
 \section{Trainings, Workshops and Presentations Conducted}
   \resumeSubHeadingListStart
-    \resumeSubItem{Microsoft Cloud Workshop on Azure Serverless}
-      {Microsoft Cloud Workshop is a set of well curated instructions. As a Microsoft Partner, Kloudynet Technologies conducted Microsoft Cloud Workshop on Azure Serverless at Microsoft Malaysia, Menara Shell, Kuala Lumpur on 14th of August 2019. I was the host and facilitator of the event. The event covered the topics on \texttt{Azure Functions, Azure Event Grid, Azure Logic Apps, Azure Cosmos DB and other Azure Serverless offerings}.}
-    \resumeSubItem{Microsoft M365 - Discovery Day}
-      {Delivered a session on how to develop Microsoft Teams connector for Twitter sentiment detection using \texttt{Azure Text Analytics and Microsoft Teams Development Platform}. The session was held at G Tower, Kuala Lumpur, Malaysia on 06th of August 2019. Organized by Microsoft Malaysia.}
-    \resumeSubItem{Microsoft App Modernization Day}
+    \resumeSubItem{Geek Camp Singapore - September 2020}
+      {Presented a session on CBOR: For faster M2M communication at Geek Camp Singapore 2020.}
+    \resumeSubItem{Microsoft Azure Webinar on Azure Serverless - June 2020}
+      {Premiered in Microsoft APAC website. In this webinar I demonstrated how to develop a severless REST API using the low-code/no-code services in Microsoft Azure. Webinar can be viewed at: \href{https://tiny.cc/nocode-azure/}{https://tiny.cc/nocode-azure/}}
+     \resumeSubItem{Microsoft App Modernization Day - December 2019}
       {Delivered a session on "Consolidating Infrastructure with \texttt{Azure Kubernetes Services}". The session was held at EQ Hotel, Kuala Lumpur, Malaysia on 12th of December 2019. Organized by Microsoft Malaysia.}
-    \resumeSubItem{FOSS Asia Summit}
-      {Presented a session on Edge computing using \texttt{Eclipse Kura, Docker and Raspberry PI} at FOSS Asia summit at Singapore on 16th March 2019.}
+    \resumeSubItem{Microsoft Cloud Workshop on Azure Serverless - August 2019}
+      {Microsoft Cloud Workshop is a set of well curated instructions. As a Microsoft Partner, Kloudynet Technologies conducted Microsoft Cloud Workshop on Azure Serverless at Microsoft Malaysia, Menara Shell, Kuala Lumpur on 14th of August 2019. I was the host and facilitator of the event. The event covered the topics on \texttt{Azure Functions, Azure Event Grid, Azure Logic Apps, Azure Cosmos DB and other Azure Serverless offerings}.}
+    \resumeSubItem{Microsoft M365 - Discovery Day - August 2019}
+      {Delivered a session on how to develop Microsoft Teams connector for Twitter sentiment detection using \texttt{Azure Text Analytics and Microsoft Teams Development Platform}. The session was held at G Tower, Kuala Lumpur, Malaysia on 06th of August 2019. Organized by Microsoft Malaysia.}
+   \resumeSubItem{FOSS Asia Summit - 2019 and 2020}
+      {Presented a session on Edge computing using \texttt{Eclipse Kura, Docker and Raspberry PI} at FOSS Asia summit at Singapore on 16th March 2019. Presented a session on Kubernetes at the Edge on March 2020.}
+    \resumeSubItem{Guest Lecture on IoT - 2017}
+      {Invited to deliver a guest lecture on IoT at University of Kelaniya in Sri Lanka.}
     \resumeSubItem{Microsoft Dot NET Forum, Sri Lanka}
       {Presented various sessions on Microsoft Technologies in Microsoft Dot NET Forum from 2015 - 2018, which is a community event hosted by Microsoft Sri Lanka.}
     \resumeSubItem{Microsoft Champs, Sri Lanka}
@@ -195,5 +215,7 @@
      CONFERENCE 2017}
       {Title : Analysis of Systematic Data Mining Approaches for Achieving Competitive
       Advantage by Monitoring Social Media. Date: August 2017}
+    \resumeSubItem{International Conference on Advances in Computing and Technology (ICACT) 2020}
+      {Title : Reference Model for Large Scale Intranet of Things Middleware. Date: November 2020}
 %-------------------------------------------
 \end{document}
