--- a/Resume.tex
+++ b/Resume.tex
@@ -1,4 +1,3 @@
-
 \documentclass[a4paper,11pt]{article}
 
 \usepackage{latexsym}
@@ -172,10 +171,9 @@
 %-----------PROJECTS-----------------
 \section{Solutions Architectured and Developed}
   \resumeSubHeadingListStart
+    \resumeSubItem{synca}{A framework to generate actions in the C\# based .NET Core Web API project to enable asynchronous request-reply pattern with in-process background service and distributed caching}
     \resumeSubItem{GMON}
       {Windows Phone app to assist blind people in their day to day life. Microsoft Imagine Cup 2013 - Sri Lanka 1st runners up.}
-    \resumeSubItem{Recommendation System}
-      {POI Recommendation system with Augmented reality for Windows Phone based on social media activities. Published a book on the system. ISBN - 3659590290}
     \resumeSubItem{Easy APIs Project}
       {A Google cloud application developed entirely on Python which was submitted for Google Cloud Developer Challenge 2013 and won 11th place in South Asia region. URL - \href{http://gcdc2013-easyapisproject.appspot.com/}{http://gcdc2013-easyapisproject.appspot.com/}}
     \resumeSubItem{Res-Ipsa}
@@ -209,10 +207,11 @@
   \resumeSubHeadingListEnd
   
 %-----------RESEARCH-----------------
-\section{Research and Conference Proceedings}
+\section{Research and Publications}
   \resumeSubHeadingListStart
-    \resumeSubItem{KDU INTERNATIONAL RESEARCH
-     CONFERENCE 2017}
+    \resumeSubItem{Undergraduate Thesis}{Publised as "Personalized Outdoor Audio Tour Guide with Augmented Reality: A research on why and how to digitalize the Sri Lankan tourism industry to comply with latest technical trends". ISBN: 3659590290}
+    \resumeSubItem{KDU International Research
+     Conference 2017}
       {Title : Analysis of Systematic Data Mining Approaches for Achieving Competitive
       Advantage by Monitoring Social Media. Date: August 2017}
     \resumeSubItem{International Conference on Advances in Computing and Technology (ICACT) 2020}
