--- a/Resume.tex
+++ b/Resume.tex
@@ -1,3 +1,4 @@
+
 \documentclass[a4paper,11pt]{article}
 
 \usepackage{latexsym}
@@ -69,7 +70,7 @@
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\href{http://ishammohamed.tech/}{\Large Isham Mohamed}} & \href{mailto:ishammohamed@outlook.com}{ishammohamed@outlook.com}\\
-  An enthusiastic and earnest engineer, seeking an& \href{https://github.com/ishammohamed}{github.com/ishammohamed} \\opportunity to work in an environment hat utilizes& +60 132 316 722 \\the skills and abilities that are demonstrated to be & \href{http://programmium.wordpress.com/}{programmium.wordpress.com}\\necessary for the duties performed
+  An enthusiastic and earnest engineer, seeking an& \href{https://github.com/ishammohamed}{github.com/ishammohamed} \\opportunity to work in an environment that utilizes& +60 132 316 722 \\the skills and abilities that are demonstrated to be & \href{http://programmium.wordpress.com/}{programmium.wordpress.com}\\necessary for the duties performed.
 \end{tabular*}
 
 %-----------EDUCATION-----------------
@@ -78,6 +79,14 @@
     \resumeSubheading
       {Sabaragamuwa University of Sri Lanka}{Belihuloya, Sri Lanka}
       {Bachelor of Science in Computing and Information Systems (spcl)}{2011 -- 2015}
+  \resumeSubHeadingListEnd
+  
+%-----------CERTIFICATION-----------------
+\section{Certification}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Microsoft Certified Professional}{H676-5353}
+      {Microsoft Certified: Developing Solutions for Microsoft Azure}{Feb 2021 -- Feb 2023}
   \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------------
